compilador/test_programs/invalid/10_duplicate_function.patito
programa duplicate_func;

entero foo() {
    return 5;
};

entero foo() {
    return 10;
};

inicio {
    escribe(foo());
}
fin
